--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     background-image: url(https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
 }
 
-.head-width {
+.head-stickbot {
     position: absolute;
     bottom: 0 !important;
     right: 0;
@@ -26,8 +26,10 @@
     height:50vh
 }
 #block1{
-    background-image: url(https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    
+    background-image: url(https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);   
+}
+.bg-oldrose{
+background-color: #be7e75;
 }
 
 @media (max-width: 991px) {
@@ -38,16 +40,26 @@
 }
 
 
+
+
+@media (max-width: 990px) {
+    .block-info{
+        background-size: 100%;
+        object-fit:cover;
+        background-repeat: no-repeat;
+        height: 50vh;
+    }
+}
+
+
 /* for mid screen+ only */
 @media (min-width: 576px) {
-    .ahead-md-center {
-     
-     }
+  
 }
-/* for large screen only */
+/* for large+ screen only */
 @media (min-width: 991px) {
     .block-info{
-        background-size: 50vw;
+        background-size: 80%;
         object-fit:cover;
         background-repeat: no-repeat;
         height: 50vh;
