--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@
 }
 
 .rose1-50{
-background-color: #b86b77;
-opacity: 50%;
+background: rgba(198, 93, 123, .5);
 }
 
 
@@ -56,10 +55,18 @@ opacity: 50%;
     }
 }
 
-
-/* for mid screen+ only */
-@media (min-width: 576px) {
-  
+/* small screen */
+@media (max-width: 576px) {
+    .blocka-bg{
+        background-size: cover;
+        background-repeat: no-repeat;
+        
+    }
+    
+}
+/* for mid screen and below only */
+@media (max-width: 991px) {
+    
 }
 /* for large+ screen only */
 @media (min-width: 991px) {
