--- a/style.css
+++ b/style.css
@@ -2,9 +2,17 @@
     padding: 0 !important;
     overflow-x: hidden;
 }
-h1,h2,h3,h4{
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    line-height: normal;
     overflow: hidden;
 }
+
 .bg-cover {
     background-size: cover;
     background-repeat: no-repeat;
@@ -17,7 +25,6 @@ h1,h2,h3,h4{
 }
 
 
-
 .head-stickbot {
     position: absolute;
     bottom: 0 !important;
@@ -25,79 +32,90 @@ h1,h2,h3,h4{
     width: 100%;
 }
 
-.in-behind{
+.in-behind {
     z-index: -1;
 }
 
-.rose1-50{
-background: rgba(198, 93, 123, .5);
+.rose1-50 {
+    background: rgba(198, 93, 123, .5);
 }
-.t-center{
+
+.t-center {
     padding: auto;
-    margin:auto;
+    margin: auto;
 }
-#Caro{
+
+#Caro {
     z-index: 1;
 }
-.i2{
+
+.i2 {
     z-index: 2;
 }
 
 
+.gal-captionlines{
+    
+    border-left: 3px solid #C65D7B;
+}
 
-.caro_a{
-    background-image:url(https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+.parallax {
+    min-height: 50%;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg-a-parallax {
+    background-image: url(https://images.pexels.com/photos/574011/pexels-photo-574011.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+}
+
+.caro_a {
+    background-image: url(https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
     opacity: 20%;
- background-position: center;
+    background-position: center;
     z-index: -1;
 }
+
+
+
 
 @media (max-width: 991px) {
     .head-md-width {
         width: 40%;
     }
-   
 }
-
-
-
-
-
 
 /* small screen */
-@media (max-width: 576px) {
-    
-    
-}
-/* for mid screen and below only */
-@media (max-width: 991px) {
-    
-}
-/* for large+ screen only */
-@media (min-width: 991px) {
-   
-    
-}
+@media (max-width: 576px) {}
 
-.pt-n{
+/* for mid screen and below only */
+@media (max-width: 991px) {}
+
+/* for large+ screen only */
+@media (min-width: 991px) {}
+
+.pt-n {
     margin-top: -3rem !important;
 }
+
 .pt-6,
 .py-6 {
-  padding-top: 5rem !important;
+    padding-top: 5rem !important;
 }
 
 .pr-6,
 .px-6 {
-  padding-right: 5rem !important;
+    padding-right: 5rem !important;
 }
 
 .pb-6,
 .py-6 {
-  padding-bottom: 5rem !important;
+    padding-bottom: 5rem !important;
 }
 
 .pl-6,
 .px-6 {
-  padding-left: 5rem !important;
+    padding-left: 5rem !important;
 }
