--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,26 @@ p{
 .mt-7{
     margin-top: 14rem;
 }
+
+
+.vid_container{
+    width:100%;
+    height:0px;
+    position:relative;
+    padding-bottom:56.250% !important;
+}
+
+.video{
+    width:100%;
+    height:100%;
+    position:absolute;
+    left:0px;
+    top:0px;
+    overflow:hidden;
+}
+
+
+
 .play_btn{
     width: 10%;
     left: 45%;
