--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,14 @@
 * {
-    margin: 0 !important;
-    padding: 0 !important;
+    padding: 0 ;
     font-family: 'Manjari';
+    margin: 0;
 }
+
+.npm{
+margin: 0 !important;
+padding: 0 !important;
+}
+
 .f-loc-title{
     font-size: 40px;
 }
@@ -135,7 +141,6 @@ p{
 }
 
 .gal-captionlines {
-
     border-left: 3px solid #C65D7B;
 }
 
@@ -151,12 +156,7 @@ p{
     background-image: url(https://images.pexels.com/photos/574011/pexels-photo-574011.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
 }
 
-.caro_a {
-    background-image: url(https://images.pexels.com/photos/2253870/pexels-photo-2253870.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    opacity: 20%;
-    background-position: center;
-    z-index: -1;
-}
+
 .mt-7{
     margin-top: 14rem;
 }
@@ -164,7 +164,6 @@ p{
 
 .vid_container{
     width:100%;
-    height:0px;
     position:relative;
     padding-bottom:56.250% !important;
 }
@@ -173,9 +172,26 @@ p{
     width:100%;
     height:100%;
     position:absolute;
-    left:0px;
+    right:0px;
     top:0px;
     overflow:hidden;
+}
+
+.bg-time{
+    background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url("https://images.pexels.com/photos/1162519/pexels-photo-1162519.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bg-attire{
+    background-image: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url("https://images.pexels.com/photos/3038114/pexels-photo-3038114.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-story{
+    background-image: url("../images/bg-story.png");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
@@ -193,6 +209,19 @@ p{
   flex: 0 0 0;
   max-width: 0;
 }
+.timeline-text li{
+    font-size: 22px;
+}
+.f-md-10{
+    font-size: 95px;
+}
+
+
+.bg-footer{
+    height: 9rem;
+}
+
+
 
 @media (max-width: 991px) {
     .head-md-width {
@@ -201,12 +230,12 @@ p{
 }
 
 /* small screen and below*/
-@media (max-width: 576px) {
+@media (max-width: 676px) {
     .display-sm-none{
         visibility:hidden;
     }
     .f-md-7{
-        font-size: 15px;
+        font-size: 35px;
     }
     .f-loc-title{
         font-size: 20px;
@@ -215,7 +244,10 @@ p{
         font-size: 15px;
     }
     .f-loc-time{
-        font-size: 5px;
+        font-size: 10px;
+    }
+    .gal-captionlines{
+        border: none;
     }
 }
 
@@ -248,7 +280,9 @@ p{
 .py-6 {
     padding-top: 5rem !important;
 }
-
+.space{
+    height: 100px;
+    }
 .pr-6,
 .px-6 {
     padding-right: 5rem !important;
