--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,27 @@
     padding: 0;
     margin: 0;
     font-family: 'Manjari';
+    box-sizing: border-box;
+}
 
+.vh-50 {
+    height: 50vh;
+}
+
+.vh-75 {
+    height: 75vh;
 }
 
 .npm {
     margin: 0 !important;
     padding: 0 !important;
 }
+
+/* .blur {
+    text-align: center;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+} */
 
 h1,
 h2,
@@ -20,10 +34,12 @@ h6 {
     overflow: hidden;
     margin-top: 1rem !important;
 }
+
 p {
     margin-top: 1rem !important;
     margin-bottom: 1rem !important;
 }
+
 .f-loc-title {
     font-size: 40px;
 }
@@ -52,9 +68,24 @@ p {
     margin-bottom: -50px !important;
 }
 
+.f-Sacramento {
+    font-family: 'Sacramento';
+
+}
+
+.fs-title {
+    font-size: 75px;
+
+}
+
 @font-face {
     font-family: 'Manjari';
     src: url('Manjari.woff2') format('woff2');
+}
+
+@font-face {
+    font-family: 'Manjari';
+    src: url('Sacramento.woff2') format('woff2');
 }
 
 @font-face {
@@ -90,6 +121,10 @@ p {
     text-align: center;
     height: 500px;
     width: 600px;
+}
+
+.text-rose-only {
+    color: #C08081;
 }
 
 .text-rose {
@@ -133,12 +168,11 @@ p {
 }
 
 .parallax {
-
-    min-height: 250px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
 
@@ -197,13 +231,6 @@ p {
     padding-top: 0.5rem;
 }
 
-.parallax {
-    min-height: 50%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
 
 .bg-a-parallax {
     background-image: url(https://images.pexels.com/photos/574011/pexels-photo-574011.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
@@ -214,6 +241,9 @@ p {
 }
 
 .vid_container {
+    margin-top: 0;
+    margin-right: auto;
+    margin-left: auto;
     width: 100%;
     position: relative;
     padding-bottom: 56.250% !important;
@@ -223,8 +253,8 @@ p {
     width: 100%;
     height: 100%;
     position: absolute;
-    right: 0px;
     top: 0px;
+    right: 0px;
     overflow: hidden;
 }
 
@@ -271,6 +301,9 @@ p {
     .head-md-width {
         width: 40%;
     }
+    .fs-title{
+        font-size: 75px;
+    }
 }
 
 @media (max-width: 676px) {
@@ -301,6 +334,9 @@ p {
     .logo-sm {
         height: 20px;
     }
+    .fs-title{
+        font-size: 45px;
+    }
 }
 
 @media (min-width: 576px) {
@@ -310,6 +346,9 @@ p {
 
     .fs-md-4 {
         font-size: 30px !important;
+    }
+    .fs-title{
+        font-size: 50px;
     }
 }
 
@@ -344,4 +383,3 @@ p {
 .nav-tabs {
     border-bottom: 0px;
 }
-
